--- a/src/app/components/shift-component/shift/shift.component.css
+++ b/src/app/components/shift-component/shift/shift.component.css
@@ -11,12 +11,16 @@ mat-card-header{
 }
 
 .shiftCard{
-    position:fixed;
+    position:absolute;
     left: 10%;
     top: 10%;
     margin-top: 5vw;
     margin-left: 20%;
     width: 60%;
+}
+
+mat-card {
+    margin-bottom: 1vh;
 }
 
 
